@@ -1393,7 +1393,7 @@ See the documentation for the variable `nnmail-split-fancy' for details."
      ((stringp split)
       (when nnmail-split-tracing
 	(push split nnmail-split-trace))
-      (list (nnmail-expand-newtext split)))
+      (list (nnmail-expand-newtext split t)))
 
      ;; Junk the message.
      ((eq split 'junk)
@@ -1513,7 +1513,7 @@ See the documentation for the variable `nnmail-split-fancy' for details."
 	;; on the same split, which will find it immediately in the cache.
 	(nnmail-split-it split))))))
 
-(defun nnmail-expand-newtext (newtext)
+(defun nnmail-expand-newtext (newtext &optional fancyp)
   (let ((len (length newtext))
 	(pos 0)
 	c expanded beg N did-expand)
@@ -1538,6 +1538,10 @@ See the documentation for the variable `nnmail-split-fancy' for details."
 	  (if (= c ?\&)
 	      (setq N 0)
 	    (setq N (- c ?0)))
+	  ;; We wrapped the searches in parentheses, so we have to
+	  ;; add some parentheses here...
+	  (when fancyp
+	    (setq N (+ N 3)))
 	  (when (match-beginning N)
 	    (push (if nnmail-split-lowercase-expanded
 		      (downcase (buffer-substring (match-beginning N)
